# ChangeLog for GLSR
# Copyright 1999-2004 Gentoo Foundation
# Distributed under the terms of the GNU General Public License v2
#
# $Id: ChangeLog,v 1.53 2005/03/10 20:57:16 port001 Exp $

CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                work with the new SiteModule backend. Note: some of the
                templates appear have been broken prior to the SiteModule
                rewrite, but somehow worked. 

10 Mar 2005; Ian Leitch <port001@gentoo.org>:
 * Implemented a basic cache mechanism in the Template module

17 Feb 2005; Ian Leitch <port001@gentoo.org>:
 * Added an option to restrict logins to a single IP

27 Jan 2005; Ian Leitch <port001@gentoo.org>:
 * Added a ProgrammingError exception

27 Jan 2005; Ian Leitch <port001@gentoo.org>:
 * Release 0.3
 * Modules now raise exceptions instead of calling error()
   Exception handling is done in GLSRException.py thus index.py no longer
   needed the try/except block.
 * Clean ups
 * Use os.abort() as sys.exit() raises a SystemExit which doesn't
   play nice with our code.
 * No longer print exceptions for raised errors, the stack only contains
   rubbish. It may return if I find a better solution. (Don't realy need 
   it anyway, the error message tells all we need to know)

26 Jan 2005; Ian Leitch <port001@gentoo.org>:
 * More error handling improvements. 
   Two new functions: error (used to be Logging.err) and error_user
   for printing errors based on invalid user input such as passwords.
 * logwrite now writes to the ErrorReportLog if the logtype is 'error'
 * req, user_details and domain are stored in State for functions that
   need them.
 * Removed sterr_redirect, PITA.

25 Jan 2005; Ian Leitch <port001@gentoo.org>:
 * Added a "Remember me" option on the login screen
 * Updated uncaught exception reporting to work with fcgi

25 Jan 2005; Scott Hadfield <hadfield@gentoo.org>:
 * Template bug fix