@@ -2,12 +2,20 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.53 2005/03/10 20:57:16 port001 Exp $
+# $Id: ChangeLog,v 1.54 2005/03/24 07:05:17 hadfield Exp $
 
 CURRENT STATUS: Broken. Various templates/modules need updating/fixing to
                 work with the new SiteModule backend. Note: some of the
                 templates appear have been broken prior to the SiteModule
                 rewrite, but somehow worked. 
+
+23 Mar 2005; Scott Hadfield <hadfield@gentoo.org>:
+ * Added a basic requirements document to glsr/doc/requirements
+
+19 Mar 2005; Scott Hadfield <hadfield@gentoo.org>:
+ * Added better comments to the template module.
+ * Made caching optional.
+ * Writing the cache to file is now done in a seperate thread.
 
 10 Mar 2005; Ian Leitch <port001@gentoo.org>:
  * Implemented a basic cache mechanism in the Template module
